--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 </head>
 
 <body>
-
+    <div class="container">
+        <div class="clock" id="clockContainer">
+            <div id="hoursContainer"></div>
+            <div id="minutesContainer"></div>
+            <div id="secondsContainer"></div>
+        </div>
+    </div>
+    <script src="numbers.js"></script>
     <script src="main.js"></script>
 </body>
 
