Working clock with HTML elements

--- a/index.html
+++ b/index.html
@@ -11,10 +11,115 @@
 
 <body>
     <div class="container">
-        <div class="clock" id="clockContainer">
-            <div id="hoursContainer"></div>
-            <div id="minutesContainer"></div>
-            <div id="secondsContainer"></div>
+        <div id="clockContainer">
+            <div class="didgitContainer" id="hoursContainer">
+                <div class="didgit">
+                    <div class="digitBlock firstHour"></div>
+                    <div class="digitBlock firstHour"></div>
+                    <div class="digitBlock firstHour"></div>
+                    <div class="digitBlock firstHour"></div>
+                    <div class="digitBlock firstHour"></div>
+                    <div class="digitBlock firstHour"></div>
+                    <div class="digitBlock firstHour"></div>
+                    <div class="digitBlock firstHour"></div>
+                    <div class="digitBlock firstHour"></div>
+                    <div class="digitBlock firstHour"></div>
+                    <div class="digitBlock firstHour"></div>
+                    <div class="digitBlock firstHour"></div>
+                    <div class="digitBlock firstHour"></div>
+                    <div class="digitBlock firstHour"></div>
+                    <div class="digitBlock firstHour"></div>
+                </div>
+                <div class="didgit">
+                    <div class="digitBlock secondHour"></div>
+                    <div class="digitBlock secondHour"></div>
+                    <div class="digitBlock secondHour"></div>
+                    <div class="digitBlock secondHour"></div>
+                    <div class="digitBlock secondHour"></div>
+                    <div class="digitBlock secondHour"></div>
+                    <div class="digitBlock secondHour"></div>
+                    <div class="digitBlock secondHour"></div>
+                    <div class="digitBlock secondHour"></div>
+                    <div class="digitBlock secondHour"></div>
+                    <div class="digitBlock secondHour"></div>
+                    <div class="digitBlock secondHour"></div>
+                    <div class="digitBlock secondHour"></div>
+                    <div class="digitBlock secondHour"></div>
+                    <div class="digitBlock secondHour"></div>
+                </div>
+            </div>
+            <div class="didgitContainer" id="minutesContainer">
+                <div class="didgit">
+                    <div class="digitBlock firstMinute"></div>
+                    <div class="digitBlock firstMinute"></div>
+                    <div class="digitBlock firstMinute"></div>
+                    <div class="digitBlock firstMinute"></div>
+                    <div class="digitBlock firstMinute"></div>
+                    <div class="digitBlock firstMinute"></div>
+                    <div class="digitBlock firstMinute"></div>
+                    <div class="digitBlock firstMinute"></div>
+                    <div class="digitBlock firstMinute"></div>
+                    <div class="digitBlock firstMinute"></div>
+                    <div class="digitBlock firstMinute"></div>
+                    <div class="digitBlock firstMinute"></div>
+                    <div class="digitBlock firstMinute"></div>
+                    <div class="digitBlock firstMinute"></div>
+                    <div class="digitBlock firstMinute"></div>
+                </div>
+                <div class="didgit">
+                    <div class="digitBlock secondMinute"></div>
+                    <div class="digitBlock secondMinute"></div>
+                    <div class="digitBlock secondMinute"></div>
+                    <div class="digitBlock secondMinute"></div>
+                    <div class="digitBlock secondMinute"></div>
+                    <div class="digitBlock secondMinute"></div>
+                    <div class="digitBlock secondMinute"></div>
+                    <div class="digitBlock secondMinute"></div>
+                    <div class="digitBlock secondMinute"></div>
+                    <div class="digitBlock secondMinute"></div>
+                    <div class="digitBlock secondMinute"></div>
+                    <div class="digitBlock secondMinute"></div>
+                    <div class="digitBlock secondMinute"></div>
+                    <div class="digitBlock secondMinute"></div>
+                    <div class="digitBlock secondMinute"></div>
+                </div>
+            </div>
+            <div class="didgitContainer" id="secondsContainer">
+                <div class="didgit">
+                    <div class="digitBlock firstSecond"></div>
+                    <div class="digitBlock firstSecond"></div>
+                    <div class="digitBlock firstSecond"></div>
+                    <div class="digitBlock firstSecond"></div>
+                    <div class="digitBlock firstSecond"></div>
+                    <div class="digitBlock firstSecond"></div>
+                    <div class="digitBlock firstSecond"></div>
+                    <div class="digitBlock firstSecond"></div>
+                    <div class="digitBlock firstSecond"></div>
+                    <div class="digitBlock firstSecond"></div>
+                    <div class="digitBlock firstSecond"></div>
+                    <div class="digitBlock firstSecond"></div>
+                    <div class="digitBlock firstSecond"></div>
+                    <div class="digitBlock firstSecond"></div>
+                    <div class="digitBlock firstSecond"></div>
+                </div>
+                <div class="didgit">
+                    <div class="digitBlock secondSecond"></div>
+                    <div class="digitBlock secondSecond"></div>
+                    <div class="digitBlock secondSecond"></div>
+                    <div class="digitBlock secondSecond"></div>
+                    <div class="digitBlock secondSecond"></div>
+                    <div class="digitBlock secondSecond"></div>
+                    <div class="digitBlock secondSecond"></div>
+                    <div class="digitBlock secondSecond"></div>
+                    <div class="digitBlock secondSecond"></div>
+                    <div class="digitBlock secondSecond"></div>
+                    <div class="digitBlock secondSecond"></div>
+                    <div class="digitBlock secondSecond"></div>
+                    <div class="digitBlock secondSecond"></div>
+                    <div class="digitBlock secondSecond"></div>
+                    <div class="digitBlock secondSecond"></div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="numbers.js"></script>
